checkers/tests/igj/ImmutableObject.out
ImmutableObject.java:18: error: (type.invalid)
ImmutableObject.java:27: error: (argument.type.incompatible)
ImmutableObject.java:40: error: (method.invocation.invalid)
ImmutableObject.java:42: error: (argument.type.incompatible)
ImmutableObject.java:43: error: (argument.type.incompatible)
ImmutableObject.java:51: error: (argument.type.incompatible)
ImmutableObject.java:57: error: (argument.type.incompatible)
ImmutableObject.java:70: error: (method.invocation.invalid)
ImmutableObject.java:72: error: (argument.type.incompatible)
ImmutableObject.java:73: error: (argument.type.incompatible)
ImmutableObject.java:81: error: (argument.type.incompatible)
ImmutableObject.java:87: error: (argument.type.incompatible)
ImmutableObject.java:100: error: (method.invocation.invalid)
ImmutableObject.java:102: error: (argument.type.incompatible)
ImmutableObject.java:103: error: (argument.type.incompatible)
ImmutableObject.java:111: error: (argument.type.incompatible)
ImmutableObject.java:120: error: (argument.type.incompatible)
ImmutableObject.java:124: error: (argument.type.incompatible)
ImmutableObject.java:128: error: (argument.type.incompatible)
